# vinil-player

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.Debug  Makefile.Release  README.md  VinilPlayer.pro
debug/: moc_addmusicpage.cpp  moc_clickableslider.cpp  moc_folderdetailpage.cpp  moc_folderspage.cpp  moc_homepage.cpp  moc_likedpage.cpp  moc_mainwindow.cpp  moc_playerbar.cpp  moc_trackmodel.cpp  moc_vinylwidget.cpp  object_script.VinilPlayer.Debug
installer/: lumen-music.iss
release/: object_script.VinilPlayer.Release
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/database/: database.cpp  database.h
src/pages/: addmusicpage.cpp  addmusicpage.h  folderdetailpage.cpp  folderdetailpage.h  folderspage.cpp  folderspage.h  homepage.cpp  homepage.h  likedpage.cpp  likedpage.h
src/player/: playerbar.cpp  playerbar.h  trackmodel.cpp  trackmodel.h
src/widgets/: clickableslider.cpp  clickableslider.h  theme.h  vinylwidget.cpp  vinylwidget.h
